--- a/pepeizqs deals web/Pages/Shared/_Layout.cshtml
+++ b/pepeizqs deals web/Pages/Shared/_Layout.cshtml
@@ -173,7 +173,7 @@
                                         <a class="texto-cabecera menu-dropdown-item" href="https://win6052.site4now.net/stats/awstats.pl?config=1112749300&h=8d43503475c9993340908170c2f4b9da">Visitas</a>
                                         <a class="texto-cabecera menu-dropdown-item" href="https://mail5017.site4now.net/interface/root#/email">Correo (@adminNuevosCorreos.ToString())</a>
                                         <hr />
-                                        <a class="texto-cabecera menu-dropdown-item" href="https://beta.pepeizqdeals.com/Admin/Juegos/Añadir">Añadir Juego</a>
+                                        <a class="texto-cabecera menu-dropdown-item" href="https://beta.pepeizqdeals.com/Admin/Anadir">Añadir</a>
                                         <a class="texto-cabecera menu-dropdown-item" href="https://beta.pepeizqdeals.com/Admin/Tiendas">Tiendas</a>
                                         <a class="texto-cabecera menu-dropdown-item" href="https://beta.pepeizqdeals.com/Admin/Pendientes">Pendientes</a>
                                         <hr />
