--- a/pepeizqs deals web/Pages/Shared/_Layout.cshtml
+++ b/pepeizqs deals web/Pages/Shared/_Layout.cshtml
@@ -78,10 +78,9 @@
 
     <base href="~/" />
     <component type="typeof(Juegos.Juego)" render-mode="ServerPrerendered" />
-
 </head>
 
-<body class="cuerpo">
+<body class="cuerpo" id="cuerpazo">
     <header class="cabecera">
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm" style="padding: 0px;">
             <div class="cabecera-poner cuerpo-ancho">
@@ -216,11 +215,11 @@
     <footer class="pie">
         <div class="cuerpo-ancho" style="padding-top: 30px; padding-bottom: 30px;">
             <div style="display: flex; align-items: center; font-size: 17px;">
-                <div style="width: 50%; text-align: left;">
+                <div style="width: 40%; text-align: left;">
                     &copy; @DateTime.Now.Year.ToString() • <a href="https://pepeizqapps.com/" style="text-decoration: none;" target="_blank">pepeizq's apps</a> • <a href="https://pepeizqdeals.com/" style="text-decoration: none;" target="_blank">pepeizq's deals</a>
                 </div>
 
-                <div style="width: 30%; font-size: 15px;">
+                <div style="width: 25%; font-size: 15px;">
                     <div>
                         <a href="https://github.com/pepeizq/pepeizqs-deals-web/" target="_blank" style="text-decoration: none;"><i class="fa-brands fa-github" style="font-size: 20px; margin-right: 10px;"></i>@Herramientas.Idiomas.CogerCadena(idioma, "Layout.SourceCode")</a>
                     </div>
@@ -229,13 +228,10 @@
                     </div>
                     <div style="margin-top: 5px;">
                         <a href="/Privacy" style="text-decoration: none;">@Herramientas.Idiomas.CogerCadena(idioma, "Layout.Privacy")</a>
-                    </div>
-                    <div style="margin-top: 5px;">
-                        <a href="https://beta.pepeizqdeals.com/" style="text-decoration: none;">@Herramientas.Idiomas.CogerCadena(idioma, "Layout.Beta")</a>
-                    </div>
+                    </div>                    
                 </div>
 
-                <div style="width: 20%; text-align: right;">
+                <div style="width: 25%; text-align: right;">
                     <div style="display: flex; align-items: center; justify-content: center; font-size: 24px; text-align: center;">
                         <div style="margin-left: 6px; margin-right: 6px;"><a href="https://discord.gg/GBT3FXnrm3" target="_blank"><i class="fa-brands fa-discord"></i></a></div>
                         <div style="margin-left: 6px; margin-right: 6px;"><a href="https://t.me/pepeizqdeals2" target="_blank"><i class="fa-brands fa-telegram"></i></a></div>
@@ -243,6 +239,12 @@
                         <div style="margin-left: 6px; margin-right: 6px;"><a href="https://twitter.com/pepeizqdeals" target="_blank"><i class="fa-brands fa-x-twitter"></i></a></div>
                         <div style="margin-left: 6px; margin-right: 6px;"><a href="https://steamcommunity.com/groups/pepeizqdeals/" target="_blank"><i class="fa-brands fa-steam"></i></a></div>
                     </div>
+                </div>
+
+                <div style="width: 10%; text-align: right;">
+                    <a onclick="moverScroll('cuerpazo')" style="color: var(--colorTextoOscuro); text-decoration: none; cursor: pointer;">
+                        <i class="fa-solid fa-chevron-up" style="font-size: 22px;"></i>
+                    </a>
                 </div>
             </div>          
         </div>
@@ -254,6 +256,15 @@
 
     <script src="_framework/blazor.server.js" autostart="false"></script>
     <script src="boot.js"></script>
+
+    <script>
+        function moverScroll(id) {
+            const element = document.getElementById(id);
+            const y = element.getBoundingClientRect().top + window.pageYOffset;
+
+            window.scrollTo({ top: y, behavior: 'smooth' });
+        }
+    </script>
 
     <div id="components-reconnect-modal" style="display: none"/>
 
