--- a/pepeizqs deals web/Pages/Shared/_Layout.cshtml
+++ b/pepeizqs deals web/Pages/Shared/_Layout.cshtml
@@ -243,7 +243,7 @@
 
                 <div style="width: 10%; text-align: right;">
                     <a onclick="moverScroll('cuerpazo')" style="color: var(--colorTextoOscuro); text-decoration: none; cursor: pointer;">
-                        <i class="fa-solid fa-chevron-up" style="font-size: 22px;"></i>
+                        <i class="fa-solid fa-chevron-up subir-arriba" style="font-size: 22px;"></i>
                     </a>
                 </div>
             </div>          
