--- a/pepeizqs deals web/Pages/Componentes/Secciones/Portada.razor
+++ b/pepeizqs deals web/Pages/Componentes/Secciones/Portada.razor
@@ -7,6 +7,7 @@
 @using Microsoft.VisualBasic;
 @using Noticias;
 @using pepeizqs_deals_web.Areas.Identity.Data
+@using pepeizqs_deals_web.Pages.Componentes.Admin
 
 @inject UserManager<Usuario> UserManager
 @inject IHttpContextAccessor HttpContextAccessor
@@ -140,17 +141,6 @@
 	</div>
 }
 
-@if (tooltipMostrar == true && tooltipJuego != null)
-{
-	<div style="padding: 20px; position: fixed; left: @x; top: @y; margin: auto;">
-		<div style="display: flex; margin-bottom: 10px;">
-			<img src="@CargarDRM(tooltipJuego)" style="max-width: 20px; max-height: 20px; margin-right: 20px;" />
-			<img src="@CargarIconoTienda(tooltipJuego)" style="width: 20px; height: 20px;" />
-		</div>
-		<labelx>@CargarFechaDetectado(tooltipJuego)</labelx>
-	</div>
-}
-
 @if (juegosDestacadosMostrar.Count > 0)
 {
 	<div style="display: flex; font-size: 20px; padding-bottom: 20px; align-items: center; justify-content: center;">
@@ -164,38 +154,65 @@
 		</div>
 	</div>
 
-	@x
-
 	<div style="display: flex; align-items: center; margin-bottom: 60px;">
 		<button @onclick="ClickearAtras" class="boton-pequeño destacados-botonizq" style="width: 50px; height: 50px; text-align: center;"><i class="fa-solid fa-chevron-left"></i></button>
 
 		<div class="destacados-espacio" style="display: grid; grid-auto-flow: column;">
-			@foreach (global::Juegos.Juego destacado in juegosDestacadosMostrar)
-			{
-				<div class="tooltip2 destacado-juego" @onmousemove="@(e => EnseñarTooltip(e, destacado))" @onmouseleave="@(e => OcultarTooltip(e))">
-					<a href="game/@destacado.IdMaestra" class="boton-pequeño destacado-fuente" style="padding: 3px;">
-						<div>
-							<img src="@destacado.Imagenes.Library_600x900" style="max-width: 100%; max-height: 100%;" />
-						</div>
-						<div style="display: flex; align-content: center; align-items: center; justify-content: right;">
-							<div style="background-color: darkgreen; margin: 0px; padding: 5px 10px;">
-								@CargarDescuento(destacado)
-							</div>
-							<div style="padding: 5px 10px;">
-								@CargarPrecio(destacado)
-							</div>							
-						</div>
-					</a>
+			@{			
+				int j = 0;
 
-					<div class="tooltip4" style="padding: 20px; width: 100%;">
-						<div style="display: flex; margin-bottom: 10px;">
-							<img src="@CargarDRM(destacado)" style="max-width: 20px; max-height: 20px; margin-right: 20px;" />
-							<img src="@CargarIconoTienda(destacado)" style="width: 20px; height: 20px;" />
-						</div>
-						<labelx>@CargarFechaDetectado(destacado)</labelx>
-					</div>
-				</div>
-			}
+				@foreach (var destacado in juegosDestacadosMostrar)
+				{
+					string izquierda = "105%";
+
+					if (j < 3)
+					{
+						izquierda = "105%";
+					}
+					else
+					{
+						izquierda = "-365%";
+					}
+
+					j += 1;
+
+					string miniVideo = string.Empty;
+
+					if (destacado != null)
+					{
+						if (destacado.Media != null)
+						{
+							if (string.IsNullOrEmpty(destacado.Media.Video) == false)
+							{
+								int int1 = destacado.Media.Video.LastIndexOf("/");
+								string temp1 = destacado.Media.Video.Remove(int1, destacado.Media.Video.Length - int1);
+
+								miniVideo = temp1 + "/microtrailer.webm";
+
+								miniVideo = miniVideo.Replace("cdn.akamai.steamstatic.com/", "cdn.cloudflare.steamstatic.com/");
+							}
+						}
+
+						<Tooltip izquierda="@izquierda" drm="@CargarDRM(destacado)" tienda="@CargarIconoTienda(destacado)" tiempo="@CargarFechaDetectado(destacado)" video="@miniVideo" nombre="@destacado.Nombre">
+							<div class="tooltip2 destacado-juego">
+								<a href="game/@destacado.IdMaestra" class="boton-pequeño destacado-fuente" style="padding: 3px;">
+									<div>
+										<img src="@destacado.Imagenes.Library_600x900" style="max-width: 100%; max-height: 100%;" />
+									</div>
+									<div style="display: flex; align-content: center; align-items: center; justify-content: right;">
+										<div style="background-color: darkgreen; margin: 0px; padding: 5px 10px;">
+											@CargarDescuento(destacado)
+										</div>
+										<div style="padding: 5px 10px;">
+											@CargarPrecio(destacado)
+										</div>
+									</div>
+								</a>
+							</div>
+						</Tooltip>
+					}		
+				}
+			}			
 		</div>
 
 		<button @onclick="ClickearAdelante" class="boton-pequeño destacados-botonder" style="width: 50px; height: 50px; text-align: center;"><i class="fa-solid fa-chevron-right"></i></button>
@@ -330,11 +347,11 @@ else
 						</div>
 
 						<div style="width: 73%; display: flex; flex-flow: column wrap; padding: 15px 20px;">
-							<span class="minimo-fuente">@juego.Nombre</span>
-							<div style="margin-top: 5px;">
+							<div class="minimo-fuente">@juego.Nombre</div>
+							<div style="margin-top: 10px; display: flex; align-items: center;">
 								<img src="@CargarDRM(juego)" style="width: 16px; height: 16px; margin-right: 10px;" />
 								<img src="@CargarIconoTienda(juego)" style="width: 16px; height: 16px; margin-right: 10px;" />
-								<span class="minimo-fuentefecha">@CargarFechaDetectado(juego)</span>
+								<div class="minimo-fuentefecha">@CargarFechaDetectado(juego)</div>
 							</div>
 						</div>
 
@@ -772,27 +789,5 @@ else
 		}
 
 		return imagen;
-	}
-
-	private bool tooltipMostrar = false;
-	private Juegos.Juego tooltipJuego = null;
-	private string x = string.Empty;
-	private string y = string.Empty;
-
-	private void EnseñarTooltip(MouseEventArgs args, Juegos.Juego juegoSeleccionado)
-	{
-		tooltipMostrar = true;
-
-		tooltipJuego = juegoSeleccionado;
-
-		x = args.ScreenX.ToString();
-		y = args.ScreenY.ToString();
-	}
-
-	private void OcultarTooltip(MouseEventArgs args)
-	{
-		tooltipMostrar = false;
-
-		tooltipJuego = null;
 	}
 }
